libs/@local/hashql/ast/tests/ui/lower/special-form-expander/type-2.jsonc
//@ run: fail
//@ description: type/2 should error out
["::kernel::special_form::type", "x", "Integer"]
//~^ ERROR Add missing arguments
